--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -14,4 +14,7 @@ jobs:
       - name: Pull in dev.to posts
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
+          max_post_count: "5"
           feed_list: "https://blog.einverne.info/feed.xml"
+          date_format: "yyyy-mm-dd"
+          template: "[$title]($url) $date$newline"
