Revert "fix: recent blog posts"
This reverts commit f97f5e8fdfb366454c208dce5daf166e41f9a4e6.

--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -16,3 +16,5 @@ jobs:
         with:
           max_post_count: "5"
           feed_list: "https://blog.einverne.info/feed.xml"
+          date_format: "yyyy-mm-dd"
+          template: "[$title]($url) $date$newline"
